--- a/style.scss
+++ b/style.scss
@@ -9,6 +9,8 @@
 
 .parent{
     position: relative;
+    height: 200vh;
+    overflow-y: hidden;
 
 }
 .bg,.bichoHead,.bichoManos,.hostHead{
@@ -29,12 +31,12 @@
 }
 .bichoHead{
     img{        
-        top: 60vh;
+        top: 10vh;
     }
 }
 .bichoManos{
     img{        
-        top: 40vh;
+        top: 0vh;
     }
 }
 .hostHead{
